# sraf

./: .gitignore  FILE_GUIDE.md  FINAL_REPORT.md  GIGACHAT_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_SRAF.md  SETUP_GIGACHAT.md  SOLUTION_SUMMARY.md  SSL_TROUBLESHOOTING.md  START_HERE.txt  add_numbers.py  pyproject.toml  run_sraf.sh  sraf.sh  test_gigachat_connection.py  verify.sh
examples/: gigachat_auth_example.py
sraf/: __init__.py  cli.py  conversation.py  escalation.py  evaluator.py  instructions.py  json_utils.py  llm.py  meta_loop.py  models.py  prompts.py  refiner.py  runner.py  sandbox.py  sanitizer.py  skill_manager.py  tools.py
sraf/prompts/: __init__.py  base_system.py  evaluator.py  instruction_extractor.py  instruction_validator.py  refiner.py  sanitizer.py
tests/: test_sraf.py
