[project]
name = "sraf"
version = "0.1.0"
description = "Self-Refining Agent Framework with GigaChat-first LLM loop and human escalation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gigachat>=0.1.40",
  "socksio>=1.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
sraf = "sraf.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
